--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -5,13 +5,13 @@
   <input id="hidden" type="hidden" name="_method" value="patch">
   
   <label for="recipe_name">Recipe Name:</label>
-  <input id="recipe_name" type="text" name="name" value="">
+  <input id="recipe_name" type="text" name="name" value="<%= @recipe.name %>">
   
   <label for="recipe_ingredients">Recipe Ingredients:</label>
-  <input id="recipe_ingredients" type="text" name="ingredients" value="">
+  <input id="recipe_ingredients" type="text" name="ingredients" value="<%= @recipe.ingredients %>">
   
   <label for="recipe_cook_time">Recipe Cook Time:</label>
-  <input id="recipe_cook_time" type="text" name="cook_time" value="">
+  <input id="recipe_cook_time" type="text" name="cook_time" value="<%= @recipe.cook_time %>">
   
   <input type="submit" value="submit">
 </form>
