--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -1,12 +1,12 @@
 <form action="/recipes" method="POST">
   <label for="recipe_name">Recipe Name:</label>
-  <input id="recipe_name" type="text" name="name" value="">
+  <input id="recipe_name" type="text" name="name" value="<%= @recipe.name %>">
   <br>
   <label for="recipe_ingredients">Recipe Ingredients:</label>
-  <input id="recipe_ingredients" type="text" name="ingredients" value="">
+  <input id="recipe_ingredients" type="text" name="ingredients" value="<%= @recipe.ingredients %>">
   <br>
   <label for="recipe_cook_time">Recipe Cook Time:</label>
-  <input id="recipe_cook_time" type="text" name="cook_time" value="">
+  <input id="recipe_cook_time" type="text" name="cook_time" value="<%= @recipe.cook_time %>">
   <br>
   <input type="submit">
 </form>
